--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@cosmjs/crypto": "^0.29.5",
+    "@digitalbazaar/ed25519-verification-key-2020": "^3.3.0",
+    "@digitalbazaar/x25519-key-agreement-key-2020": "^2.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fs": "^0.0.1-security",
+    "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#ssi-integration",
+    "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk.git#studio-api",
+    "hypersign-edv-client": "git+https://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@github.com/hypersign-protocol/hypersign-edv-client.git#master",
     "mongoose": "^6.8.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
