--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "argon2": "^0.30.3",
@@ -37,6 +39,8 @@
     "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk.git#studio-api",
     "hypersign-edv-client": "git+https://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@github.com/hypersign-protocol/hypersign-edv-client.git#master",
     "mongoose": "^6.8.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.0",
@@ -49,6 +53,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
