--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+*.env
+.env
 
 # IDE - VSCode
 .vscode/*
@@ -36,4 +38,3 @@ lerna-debug.log*
 
 
 
-.dev.env
