--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "fs": "^0.0.1-security",
     "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#ssi-integration",
     "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk.git#studio-api",
-    "hypersign-edv-client": "git+https://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:x-oauth-basic@github.com/hypersign-protocol/hypersign-edv-client.git#master",
+    "hypersign-edv-client": "git+https://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@github.com/hypersign-protocol/hypersign-edv-client.git#master",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
