--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "bumpVersion": "npm version"
+    "bumpVersion": "npm version --tag-version-prefix ''"
   },
   "dependencies": {
     "@cosmjs/crypto": "^0.29.5",
