--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "bumpVersion": "npm version --tag-version-prefix ''",
-    "pushTag": "git push origin --tag"
+    "pushTag": "git push origin --tag",
     "prepare": "husky install"
   },
   "dependencies": {
