basic st is set for new edv

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "studio-api",
-  "version": "2.2.1",
+  "version": "2.2.3",
   "description": "",
   "author": "",
   "private": true,
@@ -39,9 +39,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fs": "^0.0.1-security",
-    "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#ssi-integration",
-    "hs-ssi-sdk": "github:hypersign-protocol/hid-ssi-js-sdk#master",
-    "hypersign-edv-client": "git+https://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@github.com/hypersign-protocol/hypersign-edv-client.git#authentication",
+    "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#main",
+    "hs-ssi-sdk": "7.0.1",
+    "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
