--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fs": "^0.0.1-security",
     "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#main",
     "hs-ssi-sdk": "7.0.1",
+    "hypersign-auth-node-sdk": "^6.3.2",
     "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
