--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Install packages
         run: yarn install --network-concurrency 1
 
-      - name: Build studio-api
+      - name: Build studio-server
         run: yarn build
