--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Studio Server Build Workflow
+name: Entity Developer Dashboard Build Workflow
 
 on:
   pull_request:
@@ -21,5 +21,5 @@ jobs:
       - name: Install packages
         run: yarn install --network-concurrency 1
 
-      - name: Build studio-server
+      - name: Build studio-api
         run: yarn build
