updated test case based on recent change in hs-ssi-sdk

--- a/dev.env.sample
+++ b/dev.env.sample
@@ -9,9 +9,8 @@ EDV_DID_FILE_PATH='.api-edv-config/edv-did.json'
 EDV_KEY_FILE_PATH='.api-edv-config/edv-keys.json'
 MNEMONIC=
 JWT_SECRET=
-STUDIO_SERVER_JWT_SECRET=
 WHITELISTED_CORS=["https://entity.hypersign.id"]
-
-
+VAULT_PREFIX=
+ENTITY_API_SERVICE_BASE_URL=
 
 
