--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@cosmjs/crypto": "^0.29.5",
+    "@cosmjs/proto-signing": "^0.32.1",
     "@digitalbazaar/ed25519-verification-key-2020": "^3.3.0",
     "@digitalbazaar/x25519-key-agreement-key-2020": "^2.1.0",
     "@nestjs/common": "^9.0.0",
@@ -41,7 +42,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#main",
-    "hs-ssi-sdk": "7.0.1",
+    "hs-ssi-sdk": "file:../../hid-ssi-js-sdk",
     "hypersign-auth-node-sdk": "^6.4.0",
     "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
     "mongoose": "^6.8.3",
