--- a/.deploy/deployment.yaml
+++ b/.deploy/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: developer-dashboard-backend-app
           image: __GOOGLE_ARTIFACT_URL__/__GOOGLE_PROJECT_ID__/__GOOGLE_ARTIFACT_REPO__/entity-developer-dashbord-service:latest
+          imagePullPolicy: Always
           resources:
             limits:
               memory: "1Gi"
