--- a/.deploy/deployment.yaml
+++ b/.deploy/deployment.yaml
@@ -53,8 +53,10 @@ spec:
               value: __MNEMONIC__
             - name: JWT_SECRET
               value: __JWT_SECRET__
+            - name: EMAIL_CREDENTITAL_SCHEMA_ID
+              value: __EMAIL_CREDENTITAL_SCHEMA_ID__
             - name: WHITELISTED_CORS
-              value: '["https://entity.hypersign.id","http://localhost:9001", "https://wallet-jagrat.hypersign.id", "http://localhost:4999","https://entity.dashboard.hypersign.id"]'
+              value: '["https://entity.hypersign.id","http://localhost:9001", "https://wallet-prajna.hypersign.id", "http://localhost:4999","https://entity.dashboard.hypersign.id"]'
             - name: ENTITY_API_SERVICE_BASE_URL
               value: __ENTITY_API_SERVICE_BASE_URL__
             - name: DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP
