--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#main",
-    "hs-ssi-sdk": "7.0.1",
-    "hypersign-auth-node-sdk": "^6.4.0",
+    "hs-ssi-sdk": "github:hypersign-protocol/hid-ssi-js-sdk#testcase/bjj",
+    "hypersign-auth-node-sdk": "github:hypersign-protocol/hypersign-auth-node-sdk#update-prajna",
     "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
