updated env sample

--- a/dev.env.sample
+++ b/dev.env.sample
@@ -1,17 +1,15 @@
-PORT=
 DATABASE_CONNECTION_PATH=
-HID_NETWORK_RPC=
-HID_NETWORK_API=
-HID_NETWORK_NAMESPACE=testnet
-EDV_BASE_URL=
+HID_NETWORK_RPC=https://rpc.prajna.hypersign.id/
+HID_NETWORK_API=https://api.prajna.hypersign.id/
+EDV_BASE_URL=https://stage.hypermine.in/vault
 EDV_CONFIG_DIR='.api-edv-config'
 EDV_DID_FILE_PATH='.api-edv-config/edv-did.json'
 EDV_KEY_FILE_PATH='.api-edv-config/edv-keys.json'
 MNEMONIC=
-JWT_SECRET=
-STUDIO_SERVER_JWT_SECRET=
 WHITELISTED_CORS=["https://entity.hypersign.id"]
-
-
-
-
+JWT_SECRET=
+PORT= 3002
+VAULT_PREFIX=
+ENTITY_API_SERVICE_BASE_URL=http://localhost:8080
+DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP=
+EMAIL_CREDENTITAL_SCHEMA_ID=
