--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -96,8 +96,14 @@ jobs:
         run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP__#${{ secrets.DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP }}#" {} \;
       - name: "Replace Secrets"
         run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__EMAIL_CREDENTITAL_SCHEMA_ID__#${{ secrets.EMAIL_CREDENTITAL_SCHEMA_ID }}#" {} \;
-      # - name: "Replace Secrets"
-      # run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__WHITELISTED_CORS__#\'$WHITELISTED_CORS\'#" {} \;
+      - name: "Replace Secrets"
+        run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__TENANT_SUBDOMAIN_PREFIX__#${{ secrets.TENANT_SUBDOMAIN_PREFIX }}#" {} \;
+      - name: "Replace Secrets"
+        run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__SSI_API_DOMAIN__#${{ secrets.SSI_API_DOMAIN }}#" {} \;
+      - name: "Replace Secrets"
+        run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__CAVACH_API_DOMAIN__#${{ secrets.CAVACH_API_DOMAIN }}#" {} \;
+      - name: "Replace Secrets"
+        run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__VAULT_PREFIX__#${{ secrets.VAULT_PREFIX }}#" {} \;
       - name: "Replace Secrets"
         run: find .deploy/deployment.yaml -type f -exec sed  -i "s#__ENTITY_API_SERVICE_BASE_URL__#${{ secrets.ENTITY_API_SERVICE_BASE_URL }}#" {} \;
       - name: "Replace secrets"
