--- a/env.sample
+++ b/env.sample
@@ -4,7 +4,7 @@ WHITELISTED_CORS=["http://localhost:9001","https://wallet-prajna.hypersign.id"]
 TENANT_SUBDOMAIN_PREFIX="ent-"
 
 # Database connection
-DATABASE_CONNECTION_PATH=mongodb+srv://nodetest:varsha03@nodetest.dsj9j.mongodb.net/entity-developer-dashboard?retryWrites=true&w=majority
+DATABASE_CONNECTION_PATH=mongodb+srv://<username>:<password>@nodetest.dsj9j.mongodb.net/entity-developer-dashboard?retryWrites=true&w=majority
 
 # Hypersign Network 
 HID_NETWORK_RPC=https://rpc.prajna.hypersign.id/
@@ -16,8 +16,8 @@ EDV_BASE_URL=https://stage.hypermine.in/vault
 VAULT_PREFIX='hs:developer-dashboard:'
 
 # KMS
-MNEMONIC=cube grit eyebrow message grid antenna comic desk lunch test clutch case agree depend salmon dragon unhappy gospel scare despair become science egg awake
-JWT_SECRET=e8b86afe-3fc6-4c97-a44d-cc105caeff01
+MNEMONIC="comic desk lunch test clutch case agree depend salmon dragon..."
+JWT_SECRET="e8b86afe-3fc6-4c97-a44d"
 
 # ID Wallet
 EMAIL_CREDENTITAL_SCHEMA_ID="sch:hid:testnet:z6MkoTFHzx3XPXAvAVAN9CWMh91vH53m4kTFiVPypC22c7fB:1.0"
