added google login

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mongoose": "^9.2.1",
-    "@nestjs/passport": "^9.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@stablelib/ed25519": "^1.0.3",
@@ -45,8 +45,10 @@
     "hs-ssi-sdk": "^7.0.1",
     "hypersign-auth-node-sdk": "github:hypersign-protocol/hypersign-auth-node-sdk#update-prajna",
     "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
+    "idb-keyval": "^6.2.1",
     "mongoose": "^6.8.3",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "readline-sync": "^1.4.10",
