--- a/env.sample
+++ b/env.sample
@@ -19,9 +19,14 @@ VAULT_PREFIX='hs:developer-dashboard:'
 MNEMONIC="comic desk lunch test clutch case agree depend salmon dragon..."
 JWT_SECRET="e8b86afe-3fc6-4c97-a44d"
 
-# ID Wallet
+# HID Wallet login settings
 EMAIL_CREDENTITAL_SCHEMA_ID="sch:hid:testnet:z6MkoTFHzx3XPXAvAVAN9CWMh91vH53m4kTFiVPypC22c7fB:1.0"
-# DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP="http://localhost:3002"
+DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP="http://localhost:3002"
+
+# Google auth settings
+GOOGLE_CLIENT_ID=777246753.googleusercontent.com
+GOOGLE_CLIENT_SECRET=GOCSPX-DQttsnKjpc_pwg
+REDIRECT_URL="http://localhost:9001/#/studio/home"
 
 # Services Domains
 SSI_API_DOMAIN="https://api.entity.hypersign.id"
