added provider option

--- a/dev.env.sample
+++ b/dev.env.sample
@@ -12,6 +12,11 @@ JWT_SECRET=
 STUDIO_SERVER_JWT_SECRET=
 WHITELISTED_CORS=["https://entity.hypersign.id"]
 
+#### google login credential Production
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_AUTH_BASE_URL=
+
 
 
 
