--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
     "idb-keyval": "^6.2.1",
     "mongoose": "^6.8.3",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.3",
     "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
