--- a/.deploy/deployment.yaml
+++ b/.deploy/deployment.yaml
@@ -20,11 +20,11 @@ spec:
         resources:
           requests:
             memory: "2Gi"
-            cpu: "100m"
+            cpu: "250m"
             ephemeral-storage: "200Mi"
           limits:
             memory: "3Gi"
-            cpu: "200m"
+            cpu: "500m"
             ephemeral-storage: "200Mi"
         ports:
         - containerPort: __PORT__
@@ -60,9 +60,7 @@ spec:
         - name: EMAIL_CREDENTITAL_SCHEMA_ID
           value: __EMAIL_CREDENTITAL_SCHEMA_ID__
         - name: WHITELISTED_CORS
-          value: '["https://entity.hypersign.id","http://localhost:9001",
-            "https://wallet-prajna.hypersign.id",
-            "http://localhost:4999","https://entity.dashboard.hypersign.id"]'
+          value: '["https://entity.hypersign.id","http://localhost:9001", "https://wallet-prajna.hypersign.id", "http://localhost:4999","https://entity.dashboard.hypersign.id"]'
         - name: ENTITY_API_SERVICE_BASE_URL
           value: __ENTITY_API_SERVICE_BASE_URL__
         - name: DEVELOPER_DASHBOARD_SERVICE_PUBLIC_EP
